--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -5,12 +5,12 @@
     flex-wrap: wrap;
     gap: 20px;
     margin-top: 50px;
-    justify-content: flex-start;
+    justify-content: center;
 
 }
 .container{
     width:200px;
-    height:200px;
+    /* height:200px; */
     box-shadow: 2px 3px 3px 4px grey;
     align-items: center;
     
